--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -6,6 +6,7 @@
     <title>Cafeteria</title>
 </head>
 <body>
-    
+    <h1>Bem vindo a cafeteria</h1>
+    <p>O ponto de encontro perfeito para tomar seu café</p>
 </body>
 </html>
