--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria</title>
+    <link   rel="stylelesheet" href="style.css">
 </head>
 <body>
-    <h1>Bem vindo a cafeteria</h1>
+    <h1>Bem vindo a cafeteria☕</h1>
     <p>O ponto de encontro perfeito para tomar seu café</p>
 </body>
 </html>
