#4 texto da pagina inicial ajustada
pagina inicial ajustada.

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="PT-BR">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria</title>
-    <link   rel="stylelesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Bem vindo a cafeteria☕</h1>
-    <p>O ponto de encontro perfeito para tomar seu café</p>
+<body> 
+    <h1>Bem vindo a cafeteria!!!</h1>
+    <p>O lugar perfeito pra tomar café☕</p>
 </body>
 </html>
