#6 criado a página contato
página contato criada, junto dos espaços email e nome.

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <h1>Bem vindo a cafeteria!!!</h1>
+    <h1>Bem vindo a cafeteria La Fonte!</h1>
     <p>O lugar perfeito pra tomar café☕</p>
+    <a href="produtos.html">menu</a>
 </body>
 </html>
