--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nossoa Cafés</title>
+    <title>Nossos Cafés</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,5 +13,6 @@
         <li>Capuccino -R$6,00</li>
         <li>Mocha -R$11,00</li>
     </ul>
+    <a href="index.html">Voltar para o menu</a>
 </body>
 </html>
