--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
+    <nav>
+    <a href="produtos.html">produtos</a>
+    <a href="contato.html">Entre em contato</a>
+    </nav>
+    <h6>Feito por Camili❤️</h6>
     <h1>Bem vindo a cafeteria La Fonte!</h1>
     <p>O lugar perfeito pra tomar café☕</p>
-    <a href="produtos.html">menu</a>
 </body>
 </html>
