--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,13 @@
     <form action="">
         <label>Nome: </label>
         <input type="text" name="nome"><br>
+
+        <label>Email: </label>
         <input type="email" name="enauk"><br><br>
+
+        <label> Mensagem: </label>
+        <button type="submit" >Enviar</button>
+
     </form>
     <a href="index.html">Voltar para o menu</a>
 </body>
